<!--
  ~ Copyright (C) 2017 MINDORKS NEXTGEN PRIVATE LIMITED
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://mindorks.com/license/apache-v2
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  -->

<resources>
    <string name="app_name" translatable="false">SportSpace</string>

    <!--Toolbar menus-->
    <string name="clear">Clear</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>

    <!--Drawer-->
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>

    <!--Drawer Menus-->
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="feed">My Feed</string>

    <!--App Message-->
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="connection_error">Internet connection lost!</string>

    <!--Login-->
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <!--Login Validation-->
    <string name="empty_email">Please provide a non empty email.</string>
    <string name="invalid_email">Please provide a valid email.</string>
    <string name="empty_password">Please provide a non empty password.</string>

    <!--about fragment-->
    <string name="project_info">This sample app implements MVP architecture using Dagger2, GreenDao, RxJava, FastAndroidNetworking and PlaceholderView</string>
    <string name="link_mvp_blog">1. https://blog.mindorks.com</string>
    <string name="link_mvp_repo">2. https://github.com/MindorksOpenSource/android-mvp-architecture</string>
    <string name="link_mindorks_blog">3. https://blog.mindorks.com</string>
    <string name="link_mindorks_repo">4. https://github.com/MindorksOpenSource</string>
    <string name="version">"version"</string>

    <!--rating dialog-->
    <string name="rate_us">Rate Us</string>
    <string name="rating_message">Please let us know, how can we improve ourselves?</string>
    <string name="rating_play_store_redirect_message_line_1">Awesome! Thank you for the 5 stars.</string>
    <string name="rating_play_store_redirect_message_line_2">Please help others, in knowing some good things about this app.</string>
    <string name="rating_play_store_text">Rate us on Play Store</string>
    <string name="rating_not_provided_error">Please provide us stars.</string>
    <string name="rating_thanks">Thank you!</string>

    <!--play store-->
    <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link">"market://details?id="</string>

    <!--button-->
    <string name="later">Later</string>
    <string name="submit">Submit</string>

    <!--feed-->
    <string name="title">My Feed</string>
    <string name="open_source">Open Source</string>
    <string name="blog">Blog</string>

    <!--empty state-->
    <string name="empty_screen">We do not have anything\nhere right now.</string>
    <string name="please_retry">Please Retry</string>
    <string name="retry">Retry</string>
    <string name="login_title">Login to Capac2018</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_feed">Feed</string>
    <string name="title_profile">My Profile</string>
    <string name="title_news">News</string>
    <string name="title_categories_amp_events"><![CDATA[Categories & Events]]></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mock_time">10:00 AM</string>
    <string name="mock_date">3rd July</string>
    <string name="mock_location">Parcul Central</string>
    <string name="sport_keyword">Sport</string>
    <string name="mock_sport_time">Basketball</string>
    <string name="skill_level_keyword">Skill Level</string>
    <string name="mock_skill_level">Amator</string>
    <string name="organizer_keyword">Organizer</string>
    <string name="mock_organizer">Mihai Popescu</string>
    <string name="number_of_user_keyword">Going</string>
    <string name="mock_number_of_users">10 people</string>
    <string name="description_keyword">Description</string>
    <string name="default_description">The organizer hasn\'t provided any description for this event, just go and have some fun!</string>
    <string name="req_players_keyword">No. of players:</string>
    <string name="mock_req_users">2-10</string>
    <string name="req_stars_keyword">Required stars:</string>
    <string name="mock_req_stars">3.5</string>
    <string name="going_button_text">Going</string>
    <string name="mock_membership">Member since: 26th Sep 2018</string>
    <string name="friends_label">Friends</string>
    <string name="friends_label_description">People with who you enjoyed playing</string>
    <string name="history_label">History</string>
    <string name="history_label_description">Just in case you forgot what you did last weekend</string>
    <string name="leaderboards_label">Leaderboards</string>
    <string name="leaderboards_label_description">See how you stand against other players</string>
    <string name="settings_label">Settings</string>
    <string name="settings_label_description">Edit your preferences</string>
    <string name="terms_label"><![CDATA[Terms & privacy policy]]></string>
    <string name="terms_label_description">You don\'t realy care about this...</string>
    <string name="feedback_label"><![CDATA[Help & feedback]]></string>
    <string name="feedback_label_description">We\'re always open to suggestions</string>
    <string name="message_hint_text">Type a message</string>
    <string name="send_desc">Send</string>
    <string name="title_activity_maps">Map</string>

</resources>
