<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20dp"
    android:paddingBottom="20dp">
    <View
        android:layout_alignParentTop="true"
        android:id="@+id/separator2"
        android:background="@color/light_gray"
        android:layout_height="2dp"
        android:layout_width="300dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        xmlns:android="http://schemas.android.com/apk/res/android"/>
        <ro.capac.android.capac2018.ui.custom.RoundedImageView
            android:layout_below="@id/separator2"
            android:contentDescription="@string/description_keyword"
            android:id="@+id/user_profile_picture_dialog"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/paul"
            android:background="@drawable/profile_picture_border"/>
        <TextView
            android:layout_below="@id/user_profile_picture_dialog"
            android:id="@+id/owner_name_in_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mock_organizer"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:padding="5dp"
            style="@style/TextAppearance.Text.Bold"
            />
        <TextView
            android:padding="5dp"
            android:gravity="center"
            android:id="@+id/user_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/owner_name_in_dialog"
            style="@style/TextAppearance.Text.Light"
            android:text="@string/mock_membership"
            android:textSize="15sp"/>
        <TextView

            android:gravity="center"
            android:id="@+id/user_organized_events"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_level"
            style="@style/TextAppearance.Text.Light"
            android:text="Number Of Organized Events: 20"
            android:paddingBottom="10dp"
            android:textSize="15sp"/>
        <RatingBar
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:paddingBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_organized_events"
            android:layout_centerHorizontal="true"
            android:rating="3.5"/>
    </RelativeLayout>